kubernetes/ingress_sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noted-web-ingress
  namespace: noted
spec:
  rules:
  - host: "noted.example.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: "web"
            port:
              number: 3000
